[project]
name = "risklab"
version = "0.0.1"
description = "RiskLab Analytics Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
